updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a portfolio manager</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Cleveland, Ohio</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hockey, Cooking, Fantasy Sports</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Sports Analytics</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Gahanna, Ohio</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To work on my hockey analytics business</p>
     </section>
 
     <footer id="footer">
